fix: updating the techs section fontsize on smaller screens

--- a/portfolio/src/components/Techs/style.scss
+++ b/portfolio/src/components/Techs/style.scss
@@ -50,6 +50,9 @@
             margin: 0 5px;
         }
     }
+    @media screen and (max-width: 768px){
+        font-size: 1.2rem;
+    }
 }
 
 .techs__section-icons{
